--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,25 @@
 
 	/*background: url('../images/obiwan.jpg');*/
 }
-
+h1, h2, h4 {
+		color: white;
+}
+#yourChar{
+	height: 150px;
+}
+#yourChar{
+	height: 150px;
+}
 h3{
 	text-align: center;
 	font-size: 15px;
+	font-weight: bold;
+}
+body{
+	background-image: url("../images/background.jpg");
+}
+.character{
+	background-color: grey;
+	border-color: blue;
+	margin-right: 5px;
 }
